# microGL

./: .gitignore  CMakeLists.txt  README.md
include/: matrix4f.h  matrix4f_stack.h  microgl.h  microgl_driver.h  minigl.h  vector4f.h  vertex.h  vertex_list.h
makefiles/: README.md
src/: CMakeLists.txt  main.c  matrix4f.c  matrix4f_stack.c  microgl.c  microgl_driver.c  vector4f.c  vertex.c  vertex_list.c
